# pdk-template

./: .gitignore  Cargo.toml  Readme.md  cargo-generate.toml  manifest.yaml
src/: lib.rs
