[package]
name = "{{ crate_name }}"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdk = { version = "1.0.0-beta-SNAPSHOT", path = "../pdk/pdk" }
{% if useconfig -%}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
{% endif -%}
anyhow = "1.0.64"

[lib]
crate-type = ["cdylib"]
